# scout-project

./: .gitignore  README.md  db_main.py  report.md  requirements.txt  statistics.db  testes.ipynb
None/: Relatório_Jogadores_Selecionados.md
error_logs/2025-01-04_19-57-33/: page.html
error_logs/2025-01-04_19-58-35/: page.html
error_logs/2025-01-05_21-35-34/: page.html
error_logs/2025-01-05_21-41-27/: page.html
error_logs/2025-01-06_01-03-19/: page.html
output/: fetch_player_details.json  get_players_stats.json  report.md  report_cleaned.md
painel/: painel.py  requirements.txt  statistics.db
scout_crew/: README.md  main.py  pyproject.toml
scout_crew/src/: crew.py  tool_wraper.py
scout_crew/src/config/: agents.yaml  tasks.yaml
scout_crew/src/scout_crew/: crew.py  main.py
scout_crew/src/scout_crew/config/: agents.yaml  tasks.yaml
scout_crew/src/tools/: sql_tools.py
src/: dbmanager.py  iterator.py  scrapper.py
