[project]
name = "scout_crew"
version = "0.1.0"
description = "scout-crew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.86.0,<1.0.0"
]

[project.scripts]
scout_crew = "scout_crew.main:run"
run_crew = "scout_crew.main:run"
train = "scout_crew.main:train"
replay = "scout_crew.main:replay"
test = "scout_crew.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
